--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -37,7 +37,7 @@ import Download from "./icons/Download.astro"
       <LinkedInIcon class="size-4" />
       <span class="text-sm">LinkedIn</span>
     </SocialPill>
-    <SocialPill href="/public/Adrian-Partarrieu-CV.pdf" download="Adrian-Partarrieu-CV.pdf">
+    <SocialPill href="/Adrian-Partarrieu-CV.pdf" download="Adrian-Partarrieu-CV.pdf">
       <Download class="size-4" />
       <span class="text-sm">Descargar CV</span>
     </SocialPill>
